--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Valentines</title>
-
   <style>
     :root {
       --ui-pink: #ff8fa3;
@@ -44,8 +43,6 @@
       align-items: center;
       font-size: 70px;
       transition: all 0.3s ease;
-      text-align: center;
-      white-space: nowrap;
     }
 
     .dialogue-box {
@@ -82,7 +79,6 @@
       gap: 20px;
       margin-top: 20px;
       min-height: 110px;
-      position: relative;
     }
 
     .btn {
@@ -92,8 +88,7 @@
       border: none;
       border-radius: 5px;
       cursor: pointer;
-      transition: transform 0.15s ease-in-out;
-      white-space: nowrap;
+      transition: transform 0.1s;
     }
 
     #yesBtn {
@@ -107,11 +102,7 @@
       background: #ddd;
       color: #777;
       font-size: 16px;
-      position: absolute;
-    }
-
-    .btn:hover {
-      transform: scale(1.05);
+      position: fixed;
     }
 
     .heart {
@@ -126,34 +117,19 @@
       0% { transform: translateY(0) rotate(0); opacity: 1; }
       100% { transform: translateY(-100vh) rotate(360deg); opacity: 0; }
     }
-
-    .full-yes {
-      position: fixed !important;
-      left: 0 !important;
-      top: 0 !important;
-      width: 100vw !important;
-      height: 100vh !important;
-      border-radius: 0 !important;
-      font-size: clamp(48px, 8vw, 110px) !important;
-      padding: 0 !important;
-      z-index: 9999 !important;
-      transform: none !important;
-    }
   </style>
 </head>
-
 <body>
+
   <div class="stage">
     <div class="sprite-container" id="sprite">ฅ(•ㅅ•)ฅ</div>
-
     <div class="dialogue-box">
       <div class="char-name">Mochi the Cat</div>
-      <div class="text-content" id="dialogue">
+      <div id="dialogue" class="text-content">
         "I have a very important quest for you. Will you be my Valentine?"
       </div>
     </div>
-
-    <div class="controls" id="controls">
+    <div class="controls">
       <button class="btn" id="yesBtn" onclick="win()">YES</button>
       <button class="btn" id="noBtn">NO</button>
     </div>
@@ -162,66 +138,40 @@
   <script>
     const sprite = document.getElementById("sprite");
     const dialogue = document.getElementById("dialogue");
-    const controls = document.getElementById("controls");
     const noBtn = document.getElementById("noBtn");
     const yesBtn = document.getElementById("yesBtn");
 
-    let yesScale = 1;
-    let noClicks = 0;
-    const maxNoClicks = 5;
+    let jumpCount = 0;
+    const maxJumps = 5;
 
-    function moveNoButton() {
-      const areaRect = controls.getBoundingClientRect();
-      const btnRect = noBtn.getBoundingClientRect();
-      const padding = 8;
-
-      const maxX = areaRect.width - btnRect.width - padding;
-      const maxY = areaRect.height - btnRect.height - padding;
-
-      const x = Math.random() * Math.max(0, maxX);
-      const y = Math.random() * Math.max(0, maxY);
-
-      noBtn.style.left = x + "px";
-      noBtn.style.top = y + "px";
+    function moveButton() {
+      // Keep the button within viewport bounds
+      const x = Math.random() * (window.innerWidth - noBtn.offsetWidth);
+      const y = Math.random() * (window.innerHeight - noBtn.offsetHeight);
+      noBtn.style.left = `${x}px`;
+      noBtn.style.top = `${y}px`;
     }
 
-    function makeYesFullscreen() {
-      noBtn.style.display = "none";
-      document.querySelector(".stage").style.opacity = "0";
-      document.querySelector(".stage").style.pointerEvents = "none";
-      yesBtn.classList.add("full-yes");
-      yesBtn.textContent = "YES";
-      yesBtn.focus();
-    }
+    // Initial random placement
+    moveButton();
 
-    moveNoButton();
-
-    noBtn.addEventListener("click", () => {
-      if (noClicks >= maxNoClicks) return;
-
-      noClicks++;
-      moveNoButton();
-
-      yesScale *= 1.05;
-      yesBtn.style.transform = `scale(${yesScale})`;
-
-      sprite.innerText = "ฅ(๑•̀ㅁ•́๑)ฅ";
-      dialogue.innerText = `"No" clicks: ${noClicks}/${maxNoClicks}`;
-
-      if (noClicks === maxNoClicks) {
-        makeYesFullscreen();
+    noBtn.addEventListener("mouseenter", () => {
+      jumpCount++;
+      
+      if (jumpCount >= maxJumps) {
+        noBtn.style.display = "none";
+      } else {
+        moveButton();
       }
     });
 
     function win() {
-      sprite.innerText = "ฅ(⌯͒• ɪ •⌯͒)ฅ";
-      sprite.style.color = "#ff4d6d";
-      sprite.style.fontSize = "80px";
-
-      dialogue.innerText = '"Quest Complete! You chose the True Ending! Happy Valentines!"';
-
       noBtn.style.display = "none";
       yesBtn.style.display = "none";
+      
+      sprite.innerText = "ฅ(⌯͒• ɪ •⌯͒)ฅ";
+      sprite.style.color = "#ff4d6d";
+      dialogue.innerText = '"Quest Complete! You chose the True Ending! Happy Valentines!"';
 
       setInterval(() => {
         const h = document.createElement("div");
